// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`binding-semantic-token-creator getSemanticTokens test semantic tokens for aggregation 1`] = `
Array [
  Object {
    "char": 52,
    "length": 1,
    "line": 4,
    "tokenType": 5,
  },
  Object {
    "char": 8,
    "length": 4,
    "line": 5,
    "tokenType": 0,
  },
  Object {
    "char": 12,
    "length": 1,
    "line": 5,
    "tokenType": 3,
  },
  Object {
    "char": 13,
    "length": 9,
    "line": 5,
    "tokenType": 1,
  },
  Object {
    "char": 8,
    "length": 10,
    "line": 6,
    "tokenType": 0,
  },
  Object {
    "char": 19,
    "length": 1,
    "line": 6,
    "tokenType": 3,
  },
  Object {
    "char": 21,
    "length": 1,
    "line": 6,
    "tokenType": 5,
  },
  Object {
    "char": 12,
    "length": 7,
    "line": 7,
    "tokenType": 0,
  },
  Object {
    "char": 20,
    "length": 1,
    "line": 7,
    "tokenType": 3,
  },
  Object {
    "char": 22,
    "length": 24,
    "line": 7,
    "tokenType": 1,
  },
  Object {
    "char": 12,
    "length": 8,
    "line": 8,
    "tokenType": 0,
  },
  Object {
    "char": 21,
    "length": 1,
    "line": 8,
    "tokenType": 3,
  },
  Object {
    "char": 23,
    "length": 17,
    "line": 8,
    "tokenType": 1,
  },
  Object {
    "char": 46,
    "length": 1,
    "line": 7,
    "tokenType": 3,
  },
  Object {
    "char": 8,
    "length": 1,
    "line": 9,
    "tokenType": 5,
  },
  Object {
    "char": 22,
    "length": 1,
    "line": 5,
    "tokenType": 3,
  },
  Object {
    "char": 6,
    "length": 1,
    "line": 10,
    "tokenType": 5,
  },
]
`;

exports[`binding-semantic-token-creator getSemanticTokens test semantic tokens for property 1`] = `
Array [
  Object {
    "char": 40,
    "length": 1,
    "line": 4,
    "tokenType": 5,
  },
  Object {
    "char": 10,
    "length": 5,
    "line": 5,
    "tokenType": 0,
  },
  Object {
    "char": 15,
    "length": 1,
    "line": 5,
    "tokenType": 3,
  },
  Object {
    "char": 17,
    "length": 1,
    "line": 5,
    "tokenType": 5,
  },
  Object {
    "char": 12,
    "length": 1,
    "line": 6,
    "tokenType": 5,
  },
  Object {
    "char": 13,
    "length": 5,
    "line": 6,
    "tokenType": 0,
  },
  Object {
    "char": 18,
    "length": 1,
    "line": 6,
    "tokenType": 3,
  },
  Object {
    "char": 20,
    "length": 20,
    "line": 6,
    "tokenType": 1,
  },
  Object {
    "char": 40,
    "length": 1,
    "line": 6,
    "tokenType": 5,
  },
  Object {
    "char": 12,
    "length": 1,
    "line": 7,
    "tokenType": 5,
  },
  Object {
    "char": 13,
    "length": 4,
    "line": 7,
    "tokenType": 0,
  },
  Object {
    "char": 17,
    "length": 1,
    "line": 7,
    "tokenType": 3,
  },
  Object {
    "char": 19,
    "length": 41,
    "line": 7,
    "tokenType": 1,
  },
  Object {
    "char": 62,
    "length": 10,
    "line": 7,
    "tokenType": 0,
  },
  Object {
    "char": 72,
    "length": 1,
    "line": 7,
    "tokenType": 3,
  },
  Object {
    "char": 74,
    "length": 5,
    "line": 7,
    "tokenType": 1,
  },
  Object {
    "char": 60,
    "length": 1,
    "line": 7,
    "tokenType": 3,
  },
  Object {
    "char": 79,
    "length": 1,
    "line": 7,
    "tokenType": 5,
  },
  Object {
    "char": 12,
    "length": 1,
    "line": 8,
    "tokenType": 5,
  },
  Object {
    "char": 14,
    "length": 4,
    "line": 9,
    "tokenType": 0,
  },
  Object {
    "char": 18,
    "length": 1,
    "line": 9,
    "tokenType": 3,
  },
  Object {
    "char": 20,
    "length": 36,
    "line": 9,
    "tokenType": 1,
  },
  Object {
    "char": 14,
    "length": 4,
    "line": 10,
    "tokenType": 0,
  },
  Object {
    "char": 18,
    "length": 1,
    "line": 10,
    "tokenType": 3,
  },
  Object {
    "char": 20,
    "length": 32,
    "line": 10,
    "tokenType": 1,
  },
  Object {
    "char": 14,
    "length": 11,
    "line": 11,
    "tokenType": 0,
  },
  Object {
    "char": 25,
    "length": 1,
    "line": 11,
    "tokenType": 3,
  },
  Object {
    "char": 27,
    "length": 1,
    "line": 11,
    "tokenType": 5,
  },
  Object {
    "char": 28,
    "length": 9,
    "line": 11,
    "tokenType": 0,
  },
  Object {
    "char": 37,
    "length": 1,
    "line": 11,
    "tokenType": 3,
  },
  Object {
    "char": 39,
    "length": 3,
    "line": 11,
    "tokenType": 2,
  },
  Object {
    "char": 42,
    "length": 1,
    "line": 11,
    "tokenType": 5,
  },
  Object {
    "char": 14,
    "length": 13,
    "line": 12,
    "tokenType": 0,
  },
  Object {
    "char": 27,
    "length": 1,
    "line": 12,
    "tokenType": 3,
  },
  Object {
    "char": 29,
    "length": 1,
    "line": 12,
    "tokenType": 5,
  },
  Object {
    "char": 30,
    "length": 21,
    "line": 12,
    "tokenType": 0,
  },
  Object {
    "char": 51,
    "length": 1,
    "line": 12,
    "tokenType": 3,
  },
  Object {
    "char": 53,
    "length": 4,
    "line": 12,
    "tokenType": 4,
  },
  Object {
    "char": 57,
    "length": 1,
    "line": 12,
    "tokenType": 5,
  },
  Object {
    "char": 56,
    "length": 1,
    "line": 9,
    "tokenType": 3,
  },
  Object {
    "char": 52,
    "length": 1,
    "line": 10,
    "tokenType": 3,
  },
  Object {
    "char": 43,
    "length": 1,
    "line": 11,
    "tokenType": 3,
  },
  Object {
    "char": 12,
    "length": 1,
    "line": 13,
    "tokenType": 5,
  },
  Object {
    "char": 41,
    "length": 1,
    "line": 6,
    "tokenType": 3,
  },
  Object {
    "char": 80,
    "length": 1,
    "line": 7,
    "tokenType": 3,
  },
  Object {
    "char": 10,
    "length": 1,
    "line": 14,
    "tokenType": 5,
  },
  Object {
    "char": 10,
    "length": 9,
    "line": 15,
    "tokenType": 0,
  },
  Object {
    "char": 19,
    "length": 1,
    "line": 15,
    "tokenType": 3,
  },
  Object {
    "char": 21,
    "length": 39,
    "line": 15,
    "tokenType": 1,
  },
  Object {
    "char": 11,
    "length": 1,
    "line": 14,
    "tokenType": 3,
  },
  Object {
    "char": 8,
    "length": 1,
    "line": 16,
    "tokenType": 5,
  },
]
`;
